--- a/ticket_booking_app/pubspec.yaml
+++ b/ticket_booking_app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluentui_icons: ^1.0.0  
   flutter_screenutil: ^5.6.0
+  gap: ^2.0.1
+  get: ^4.6.5
+
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +52,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  barcode_widget: ^2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
